Tip for mentions, and updates to fix chat alignment.

--- a/applications/lumo/src/app/index.scss
+++ b/applications/lumo/src/app/index.scss
@@ -653,3 +653,7 @@ im.$media-expressions: $media-expressions;
 	background-color: #8080ff;
 	color: white;
 }
+
+.no-border {
+	border: none !important;
+}
